# serializer version: 1
# name: test_api_offline[binary_sensor][binary_sensor.home_controller_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.home_controller_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '52496_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.home_controller_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'connectivity',
      'friendly_name': 'Home Controller Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.home_controller_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.home_controller_rain_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.home_controller_rain_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOISTURE: 'moisture'>,
    'original_icon': None,
    'original_name': 'Rain sensor',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'rain_sensor',
    'unique_id': '52496_rain_sensor',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.home_controller_rain_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'moisture',
      'friendly_name': 'Home Controller Rain sensor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.home_controller_rain_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.zone_one_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_one_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering',
    'unique_id': '5965394_is_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.zone_one_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'running',
      'friendly_name': 'Zone One Watering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_one_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.zone_two_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_two_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering',
    'unique_id': '5965395_is_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[binary_sensor][binary_sensor.zone_two_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'running',
      'friendly_name': 'Zone Two Watering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_two_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '52496_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily active water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_inactive_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_inactive_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily inactive water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_inactive_water_use',
    'unique_id': '52496_daily_inactive_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_inactive_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily inactive water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_inactive_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_total_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_total_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily total water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_total_water_use',
    'unique_id': '52496_daily_total_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_api_offline[sensor][sensor.home_controller_daily_total_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily total water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_total_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '5965394_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Zone One Daily active water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_next_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_next_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next cycle',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'next_cycle',
    'unique_id': '5965394_next_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_next_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'timestamp',
      'friendly_name': 'Zone One Next cycle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_next_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_watering_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_watering_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Watering time',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering_time',
    'unique_id': '5965394_watering_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_one_watering_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'friendly_name': 'Zone One Watering time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': 'mdi:water-outline',
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '5965395_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Zone Two Daily active water use',
      'icon': 'mdi:water-outline',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_next_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_next_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next cycle',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'next_cycle',
    'unique_id': '5965395_next_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_next_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'timestamp',
      'friendly_name': 'Zone Two Next cycle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_next_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_watering_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_watering_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Watering time',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering_time',
    'unique_id': '5965395_watering_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_api_offline[sensor][sensor.zone_two_watering_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'friendly_name': 'Zone Two Watering time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[switch][switch.zone_one_automatic_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_one_automatic_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Automatic watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_watering',
    'unique_id': '5965394_auto_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[switch][switch.zone_one_automatic_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone One Automatic watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_one_automatic_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[switch][switch.zone_one_manual_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_one_manual_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Manual watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'manual_watering',
    'unique_id': '5965394_manual_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[switch][switch.zone_one_manual_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone One Manual watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_one_manual_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[switch][switch.zone_two_automatic_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_two_automatic_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Automatic watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_watering',
    'unique_id': '5965395_auto_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[switch][switch.zone_two_automatic_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone Two Automatic watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_two_automatic_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_api_offline[switch][switch.zone_two_manual_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_two_manual_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Manual watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'manual_watering',
    'unique_id': '5965395_manual_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_api_offline[switch][switch.zone_two_manual_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone Two Manual watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_two_manual_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.home_controller_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.home_controller_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '52496_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.home_controller_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'connectivity',
      'friendly_name': 'Home Controller Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.home_controller_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.home_controller_rain_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.home_controller_rain_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOISTURE: 'moisture'>,
    'original_icon': None,
    'original_name': 'Rain sensor',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'rain_sensor',
    'unique_id': '52496_rain_sensor',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.home_controller_rain_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'moisture',
      'friendly_name': 'Home Controller Rain sensor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.home_controller_rain_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.zone_one_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_one_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering',
    'unique_id': '5965394_is_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.zone_one_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'running',
      'friendly_name': 'Zone One Watering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_one_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.zone_two_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zone_two_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering',
    'unique_id': '5965395_is_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[binary_sensor][binary_sensor.zone_two_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'running',
      'friendly_name': 'Zone Two Watering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zone_two_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '52496_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily active water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_inactive_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_inactive_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily inactive water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_inactive_water_use',
    'unique_id': '52496_daily_inactive_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_inactive_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily inactive water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_inactive_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_total_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_controller_daily_total_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily total water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_total_water_use',
    'unique_id': '52496_daily_total_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.home_controller_daily_total_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Home Controller Daily total water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_controller_daily_total_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '5965394_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Zone One Daily active water use',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_next_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_next_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next cycle',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'next_cycle',
    'unique_id': '5965394_next_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_next_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'timestamp',
      'friendly_name': 'Zone One Next cycle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_next_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_watering_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_one_watering_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Watering time',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering_time',
    'unique_id': '5965394_watering_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_one_watering_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'friendly_name': 'Zone One Watering time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_one_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_daily_active_water_use-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_daily_active_water_use',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME: 'volume'>,
    'original_icon': 'mdi:water-outline',
    'original_name': 'Daily active water use',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'daily_active_water_use',
    'unique_id': '5965395_daily_active_water_use',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_daily_active_water_use-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'volume',
      'friendly_name': 'Zone Two Daily active water use',
      'icon': 'mdi:water-outline',
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_daily_active_water_use',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_next_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_next_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next cycle',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'next_cycle',
    'unique_id': '5965395_next_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_next_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'timestamp',
      'friendly_name': 'Zone Two Next cycle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_next_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_watering_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zone_two_watering_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Watering time',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'watering_time',
    'unique_id': '5965395_watering_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_controller_offline[sensor][sensor.zone_two_watering_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'friendly_name': 'Zone Two Watering time',
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zone_two_watering_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[switch][switch.zone_one_automatic_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_one_automatic_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Automatic watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_watering',
    'unique_id': '5965394_auto_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[switch][switch.zone_one_automatic_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone One Automatic watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_one_automatic_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[switch][switch.zone_one_manual_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_one_manual_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Manual watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'manual_watering',
    'unique_id': '5965394_manual_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[switch][switch.zone_one_manual_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone One Manual watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_one_manual_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[switch][switch.zone_two_automatic_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_two_automatic_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Automatic watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_watering',
    'unique_id': '5965395_auto_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[switch][switch.zone_two_automatic_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone Two Automatic watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_two_automatic_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_controller_offline[switch][switch.zone_two_manual_watering-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.zone_two_manual_watering',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SwitchDeviceClass.SWITCH: 'switch'>,
    'original_icon': None,
    'original_name': 'Manual watering',
    'platform': 'hydrawise',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'manual_watering',
    'unique_id': '5965395_manual_watering',
    'unit_of_measurement': None,
  })
# ---
# name: test_controller_offline[switch][switch.zone_two_manual_watering-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by hydrawise.com',
      'device_class': 'switch',
      'friendly_name': 'Zone Two Manual watering',
    }),
    'context': <ANY>,
    'entity_id': 'switch.zone_two_manual_watering',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
